--- a/demoweb5 (1)/src/main/webapp/cart.html
+++ b/demoweb5 (1)/src/main/webapp/cart.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <form action="/demoweb5/cart">
     <div class="container">
         <div class="navbar">
             <div class="logo">
@@ -152,6 +153,7 @@
             <hr>
             <p class="Copyright">Bản quyền 2022 - Hải Anh</p>
         </div>
+    </form>
         <!-- ------------------- js for toggle menu-------------- -->
         <script>
             var MenuItems = document.getElementById("MenuItems");
